feat: ポストエフェクト機能の追加と改善
- **DirectX12.cpp**
  - `OnResized`メソッドからバックバッファのインデックス取得処理を`NewFrame`メソッドに移動
  - `DisplayFrame`メソッドにバックバッファのインデックス取得処理を追加
- **DirectX12.h**
  - デバイスやコマンドリストを取得するゲッターを追加
  - `kMaxSRVCount_`を削除
- **CreateSwapChainAndResource**
  - RTVヒープの初期化に使用するカウンタのサイズを3から64に変更
- **DX12Helper::ChangeStateResource**
  - リソースの状態が変更されていない場合の早期リターンを追加
- **PostEffect.cpp**
  - レンダーテクスチャとSRVの生成をヘルパー関数に移動
  - 新たに`NewFrame`メソッドを追加
  - `ApplyPostEffects`メソッドを追加し、描画処理を変更
- **PostEffect.h**
  - ポストエフェクトのインスタンス管理メソッドを追加
  - デフォルトコンストラクタとデストラクタを削除
- **DebugManager**
  - `pDX12_`のポインタ名を`pDx12_`に変更
- **NimaFramework**
  - ポストエフェクトのインスタンス管理を変更し、`pPostEffect_`を生ポインタに変更
- **IPostEffect**
  - 新たにインターフェースを追加し、ポストエフェクトの基本機能を定義
- **Grayscale**
  - ポストエフェクトの実装を追加し、レンダーテクスチャの生成やSRVの設定、パイプラインステートの生成を実施
- **PostEffectHelper**
  - レンダーテクスチャとSRVを生成するヘルパー関数を追加
- **シェーダー**
  - `Grayscale`シェーダーのHLSLファイルを追加
- **Nausicaa.json**
  - パーティクルエミッターの設定を詳細に記述

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -208,6 +208,8 @@
     <ClCompile Include="DebugTools\ImGuiManager\ImGuiThemes.cpp" />
     <ClCompile Include="DebugTools\ImGuiTemplates\ImGuiTemplates.cpp" />
     <ClCompile Include="DebugTools\Logger\Logger.cpp" />
+    <ClCompile Include="Effects\PostEffects\Grayscale\Grayscale.cpp" />
+    <ClCompile Include="Effects\PostEffects\Helper\PostEffectHelper.cpp" />
     <ClCompile Include="Externals\Timer\Timer.cpp" />
     <ClCompile Include="Features\Audio\Audio.cpp" />
     <ClCompile Include="Features\Audio\AudioManager.cpp" />
@@ -268,6 +270,7 @@
     <ClInclude Include="Core\DirectX12\Framerate.h" />
     <ClInclude Include="Core\DirectX12\Helper\DX12Helper.h" />
     <ClInclude Include="Core\DirectX12\PostEffect.h" />
+    <ClInclude Include="Core\DirectX12\IPostEffect.h" />
     <ClInclude Include="Core\DirectX12\ResourceStateTracker\ResourceStateTracker.h" />
     <ClInclude Include="Core\DirectX12\RTVHeapCounter.h" />
     <ClInclude Include="Core\DirectX12\SRVManager.h" />
@@ -280,6 +283,8 @@
     <ClInclude Include="DebugTools\ImGuiTemplates\ImGuiTemplates.h" />
     <ClInclude Include="DebugTools\Logger\Logger.h" />
     <ClInclude Include="DebugTools\ReakChecker.h" />
+    <ClInclude Include="Effects\PostEffects\Grayscale\Grayscale.h" />
+    <ClInclude Include="Effects\PostEffects\Helper\PostEffectHelper.h" />
     <ClInclude Include="Externals\Timer\Timer.h" />
     <ClInclude Include="Features\Audio\Audio.h" />
     <ClInclude Include="Features\Audio\AudioManager.h" />
@@ -388,6 +393,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="EngineResources\Shaders\Grayscale.PS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Grayscale.VS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Line.PS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
