--- a/SampleProject/SampleProject.vcxproj.filters
+++ b/SampleProject/SampleProject.vcxproj.filters
@@ -73,7 +73,7 @@
       <Filter>Game\Scene\PG3PT1</Filter>
     </ClCompile>
     <ClCompile Include="Scene\CG4Task1\CG4Task1.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>Game\Scene\CG4Task1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
