--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -674,6 +674,26 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x33ACA9B5,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE451750D,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x9CAAD258,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x2213F87D,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x58AF86BD,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace           ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
   DockNode          ID=0x0000000A Parent=0xD5ACB325 SizeRef=1600,657 Split=X
