--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=426,80
-Size=756,957
+Pos=855,177
+Size=191,291
 Collapsed=0
 
 [Window][Log]
@@ -109,6 +109,16 @@ Pos=0,0
 Size=7,22
 Collapsed=0
 DockId=0x00000004,0
+
+[Window][並び替え可能なリスト]
+Pos=53,535
+Size=985,241
+Collapsed=0
+
+[Window][Sortable List]
+Pos=60,60
+Size=281,182
+Collapsed=0
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
