feat: ビネットエフェクトの実装を追加
* `IPostEffect.h`
  - `DebugOverlay` メソッドを追加し、デバッグオーバーレイを表示するための純粋仮想関数を定義。

* `PostEffect.cpp`
  - `DebugWindow` メソッドに右クリックでポップアップメニューを開く機能を追加。
  - ポップアップメニューにデバッグオーバーレイを表示するボタンを追加。

* `Grayscale.h`
  - `DebugOverlay` メソッドを追加し、空の実装を提供。

* `CG4Task1.cpp`
  - `Initialize` メソッドで `PEVignette` のインスタンスを作成し、ポストエフェクトのリストに追加。

* `CG4Task1.h`
  - `PEVignette` のヘッダーを追加し、`pPEVignette_` メンバー変数を追加。

* `Vignette.cpp` と `Vignette.h`
  - ビネットエフェクトの初期化、リソース管理、シェーダー設定、デバッグオーバーレイ表示の実装を追加。

* `Vignette.PS.hlsl` と `Vignette.VS.hlsl`
  - ビネットエフェクトのピクセルシェーダーとバーテックスシェーダーを実装。

* その他
  - `Object3dSystem.cpp` の `CreateMainPipelineState` メソッド内で `DepthStencilResource` のコメントを修正。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="DebugTools\Logger\Logger.cpp" />
     <ClCompile Include="Effects\PostEffects\Grayscale\Grayscale.cpp" />
     <ClCompile Include="Effects\PostEffects\Helper\PostEffectHelper.cpp" />
+    <ClCompile Include="Effects\PostEffects\Vignette\Vignette.cpp" />
     <ClCompile Include="Externals\Timer\Timer.cpp" />
     <ClCompile Include="Features\Audio\Audio.cpp" />
     <ClCompile Include="Features\Audio\AudioManager.cpp" />
@@ -285,6 +286,7 @@
     <ClInclude Include="DebugTools\ReakChecker.h" />
     <ClInclude Include="Effects\PostEffects\Grayscale\Grayscale.h" />
     <ClInclude Include="Effects\PostEffects\Helper\PostEffectHelper.h" />
+    <ClInclude Include="Effects\PostEffects\Vignette\Vignette.h" />
     <ClInclude Include="Externals\Timer\Timer.h" />
     <ClInclude Include="Features\Audio\Audio.h" />
     <ClInclude Include="Features\Audio\AudioManager.h" />
@@ -454,6 +456,16 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Sprite.VS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Vignette.PS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Vignette.VS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
