feat: PEVignetteに色編集機能とブレンディング追加
* `PEVignette::DebugOverlay` メソッドに、色を編集するための `ImGui::ColorEdit3` と、乗算ブレンディングを有効にするための `ImGui::Checkbox` を追加。
* `PEVignette::CreateResourceCBuffer` メソッドで、`pOption_->color` を初期化。
* `Vignette.h` に `Vector3` と `Vector4` のインクルードを追加し、`VignetteOption` 構造体に `color` と `enableMultiply` メンバーを追加。
* `Vignette.PS.hlsl` の `VignetteOption` 構造体に `color` と `enableMultiply` メンバーを追加し、ピクセルシェーダーの出力に色のブレンド処理を追加。
* `NimaFramework.cpp` の `Initialize` メソッドで、`PEGrayscale` と `PEVignette` のインスタンスを作成し、初期化してポストエフェクトに追加。
* `NimaFramework.h` に `PEGrayscale` と `PEVignette` のユニークポインタを追加し、関連するインクルードを追加。
* `CG4Task1.cpp` の `Initialize` メソッドから `PEGrayscale` と `PEVignette` のインスタンス作成と初期化を削除。
* `CG4Task1.h` から `PEGrayscale` と `PEVignette` のインクルードを削除し、関連するユニークポインタも削除。

バイナリファイルやJSONの変更はありません。

--- a/SampleProject/SampleProject.vcxproj
+++ b/SampleProject/SampleProject.vcxproj
@@ -101,7 +101,8 @@
     </Link>
     <PostBuildEvent>
       <Command>copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxcompiler.dll" "$(TargetDir)dxcompiler.dll"
-copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dxil.dll"</Command>
+copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dxil.dll"
+xcopy "../Engine/EngineResources" "./EngineResources" /I /Y /E</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">
