feat: ポストエフェクトシステムのリファクタリング
* `IPostEffect.h` と `PostEffect.cpp` の変更により、`PostEffect` クラスが `PostEffectExecuter` クラスに置き換えられ、ポストエフェクトの実行に関するメソッドが新しいクラスに移動しました。これにより、ポストエフェクトの管理がより明確になり、クラスの責任が分離されました。

* `Grayscale.cpp` と `Vignette.cpp` では、`PEGrayscale` と `PEVignette` クラスがそれぞれ `Grayscale` と `Vignette` に名前変更され、`PostEffect` から `PostEffectExecuter` への参照が更新されました。

* 新たに `BoxFilter` クラスが追加され、ポストエフェクトの一部として機能します。このクラスは、ボックスフィルタの実装を提供し、必要なメソッドをオーバーライドしています。

* `NimaFramework.cpp` では、ポストエフェクトのインスタンス化と初期化が `PostEffect` から `PostEffectExecuter` に変更され、`BoxFilter` のインスタンスも追加されました。

* シェーダーファイル (`BoxFilter.PS.hlsl` と `BoxFilter.VS.hlsl`) が新たに追加され、ボックスフィルタのピクセルシェーダーとバーテックスシェーダーが実装されています。

* プロジェクトファイル (`Engine.vcxproj` と `Engine.vcxproj.filters`) に新しいボックスフィルタ関連のファイルが追加され、ビルドプロセスに組み込まれました。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="DebugTools\ImGuiManager\ImGuiThemes.cpp" />
     <ClCompile Include="DebugTools\ImGuiTemplates\ImGuiTemplates.cpp" />
     <ClCompile Include="DebugTools\Logger\Logger.cpp" />
+    <ClCompile Include="Effects\PostEffects\BoxFilter\BoxFilter.cpp" />
     <ClCompile Include="Effects\PostEffects\Grayscale\Grayscale.cpp" />
     <ClCompile Include="Effects\PostEffects\Helper\PostEffectHelper.cpp" />
     <ClCompile Include="Effects\PostEffects\Vignette\Vignette.cpp" />
@@ -284,6 +285,7 @@
     <ClInclude Include="DebugTools\ImGuiTemplates\ImGuiTemplates.h" />
     <ClInclude Include="DebugTools\Logger\Logger.h" />
     <ClInclude Include="DebugTools\ReakChecker.h" />
+    <ClInclude Include="Effects\PostEffects\BoxFilter\BoxFilter.h" />
     <ClInclude Include="Effects\PostEffects\Grayscale\Grayscale.h" />
     <ClInclude Include="Effects\PostEffects\Helper\PostEffectHelper.h" />
     <ClInclude Include="Effects\PostEffects\Vignette\Vignette.h" />
@@ -395,6 +397,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="EngineResources\Shaders\BoxFilter.PS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\BoxFilter.VS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Grayscale.PS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_ASAN|x64'">true</ExcludedFromBuild>
