--- a/SampleProject/Resources/Json/.engine/config.json
+++ b/SampleProject/Resources/Json/.engine/config.json
@@ -2,7 +2,7 @@
     "settings": {
         "common": {
             "window_title": "Nima Engine",
-            "start_scene" : "PG3PT1",
+            "start_scene" : "CG4Task1",
             "screen_width": 1600,
             "screen_height": 900
         },
