--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Log]
 Pos=0,17
-Size=17,22
+Size=16,22
 Collapsed=0
 DockId=0x00000007,0
 
@@ -82,7 +82,7 @@ Collapsed=0
 DockId=0x00000009,2
 
 [Window][EventTimer]
-Pos=19,17
+Pos=18,17
 Size=4,22
 Collapsed=0
 DockId=0x00000008,0
@@ -704,6 +704,10 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x9380B617,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace           ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
   DockNode          ID=0x0000000A Parent=0xD5ACB325 SizeRef=1600,657 Split=X
@@ -716,9 +720,9 @@ DockSpace           ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y S
         DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1600,241 Selected=0x64F50EE5
     DockNode        ID=0x00000006 Parent=0x0000000A SizeRef=409,900 Selected=0x392A5ADD
   DockNode          ID=0x0000000B Parent=0xD5ACB325 SizeRef=1600,241 Split=X Selected=0x64F50EE5
-    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=1189,241 Split=X Selected=0x64F50EE5
-      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=985,241 Selected=0x64F50EE5
-      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=202,241 Selected=0x3A93B30B
+    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=1189,241 Split=X Selected=0x3A93B30B
+      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=963,241 Selected=0x64F50EE5
+      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=224,241 Selected=0x3A93B30B
     DockNode        ID=0x0000000F Parent=0x0000000B SizeRef=409,241 Split=Y Selected=0x60B79D0E
       DockNode      ID=0x0000000D Parent=0x0000000F SizeRef=409,68 Selected=0x8EDA8100
       DockNode      ID=0x00000010 Parent=0x0000000F SizeRef=409,171 Selected=0x60B79D0E
