feat: デバッグユーティリティの追加と機能改善
* `Engine.vcxproj` と `Engine.vcxproj.filters` に `Utility\Debug\dbgutl.cpp` と `Utility\Debug\dbgutl.h` を追加し、デバッグユーティリティを組み込みました。

* `Object3d.cpp`
  - `Object3d::Initialize` メソッドに `_enableDebugWindow` 引数を追加し、デバッグウィンドウの表示を制御できるようにしました。
  - `Object3d::Finalize` メソッドを修正し、デバッグウィンドウが有効な場合のみデバッグマネージャーからコンポーネントを削除するようにしました。

* `Object3d.h`
  - `Object3d::Initialize` メソッドのシグネチャを変更し、デフォルト値として `true` を設定しました。
  - `isEnableDebugWindow_` メンバ変数を追加し、デバッグウィンドウの有効/無効を管理します。

* `Object3dSystem.h`
  - `Model* model` の初期化を `nullptr` に変更し、安全な初期化を実現しました。

* `dbgutl.cpp` と `dbgutl.h`
  - デバッグ用の名前を生成する `generate_name_default` 関数を実装しました。

* バイナリファイルやJSONファイルの変更はありません。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -269,6 +269,7 @@
     <ClCompile Include="Features\Viewport\Viewport.cpp" />
     <ClCompile Include="Framework\NimaFramework.cpp" />
     <ClCompile Include="Type\Color.cpp" />
+    <ClCompile Include="Utility\Debug\dbgutl.cpp" />
     <ClCompile Include="Utility\FilePathSearcher\FilePathSearcher.cpp" />
     <ClCompile Include="Utility\JSONIO\JSONIO.cpp" />
   </ItemGroup>
@@ -361,6 +362,7 @@
     <ClInclude Include="Interfaces\ISceneFactory.h" />
     <ClInclude Include="Type\Color.h" />
     <ClInclude Include="Utility\ConvertString\ConvertString.h" />
+    <ClInclude Include="Utility\Debug\dbgutl.h" />
     <ClInclude Include="Utility\DIContainer\DIContainer.h" />
     <ClInclude Include="Utility\FilePathSearcher\FilePathSearcher.h" />
     <ClInclude Include="Utility\JSONConvTypeFuncs\JSONConvTypeFuncs.h" />
