--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -151,9 +151,6 @@
     <Filter Include="Feature\SceneTransition\Manager">
       <UniqueIdentifier>{a8bd3d85-68b2-4d21-9e41-d119dee47a7a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Feature\BaseObject">
-      <UniqueIdentifier>{90205c8c-8565-42f7-a0bc-e073e726d0be}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Feature\Collision">
       <UniqueIdentifier>{8b3b583a-7857-484a-b311-3a30cccc93f5}</UniqueIdentifier>
     </Filter>
@@ -399,9 +396,6 @@
     <ClCompile Include="Features\SceneTransition\SceneTransitionManager.cpp">
       <Filter>Feature\SceneTransition\Manager</Filter>
     </ClCompile>
-    <ClCompile Include="Features\BaseObject\BaseObject.cpp">
-      <Filter>Feature\BaseObject</Filter>
-    </ClCompile>
     <ClCompile Include="Features\Collision\Manager\CollisionManager.cpp">
       <Filter>Feature\Collision\Manager</Filter>
     </ClCompile>
@@ -513,7 +507,9 @@
     <ClCompile Include="Core\DirectX12\TextureResource\TextureResource.cpp">
       <Filter>Core\DirectX12\TextureResource</Filter>
     </ClCompile>
-    <ClCompile Include="Utility\Debug\dbgutl.cpp" />
+    <ClCompile Include="Utility\Debug\dbgutl.cpp">
+      <Filter>Utility\Debug</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\define.h">
@@ -662,9 +658,6 @@
     </ClInclude>
     <ClInclude Include="Features\SceneTransition\SceneTransitionManager.h">
       <Filter>Feature\SceneTransition\Manager</Filter>
-    </ClInclude>
-    <ClInclude Include="Features\BaseObject\BaseObject.h">
-      <Filter>Feature\BaseObject</Filter>
     </ClInclude>
     <ClInclude Include="Features\Collision\Manager\CollisionManager.h">
       <Filter>Feature\Collision\Manager</Filter>
